# bloomcoin-v2

./: .gitignore  README.md  badge-protocol-generator.html  generator-hub.html  index.html  lsb-png-generator.html
bloomcoin-v0.1.0/bloomcoin/: pyproject.toml
bloomcoin-v0.1.0/bloomcoin/bloomcoin/: README_BLOCKCHAIN.md  constants.py
bloomcoin-v0.1.0/bloomcoin/bloomcoin/analysis/: README.md  __init__.py  chi_square.py  entropy_metrics.py  hexagonal_lattice.py  multi_body.py  phase_portrait.py
bloomcoin-v0.1.0/bloomcoin/bloomcoin/consensus/: README.md
bloomcoin-v0.1.0/bloomcoin/bloomcoin/network/: README.md
bloomcoin-v0.1.0/bloomcoin/bloomcoin/receipt/: __init__.py  channel_decoder.py  channel_encoder.py  gradient_schema.py  image_renderer.py  receipt_builder.py  receipt_verifier.py
bloomcoin-v0.1.0/bloomcoin/bloomcoin/wallet/: README.md  __init__.py  address.py  cli.py  keypair.py  signer.py  test_wallet.py  wallet.py
bloomcoin-v0.1.0/bloomcoin/examples/: README.md  analysis_demo.py  wallet_demo.py
bloomcoin-v0.1.0/bloomcoin/primitives/: README.md
bloomcoin-v0.1.0/bloomcoin/tests/: README_SIX_PRIMITIVES.md  run_all_primitives_tests.py  simple_primitives_demo.py  six_primitives.py  six_primitives_report.json  test_bloomcoin_primitives.py  test_channel_encoding.py  test_gradient_schema.py  test_mix_barrier.py  test_quantum_classical.py  test_receipt_roundtrip.py
garden/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  garden_state.json  garden_system.py
garden/agents/: __init__.py  agent.py  communication.py  knowledge.py  learning.py
garden/bloom_events/: __init__.py  bloom_event.py  detector.py  reward_system.py  validator.py
garden/consensus/: __init__.py  communication_consensus.py  consensus_protocol.py  proof_of_learning.py  validator_network.py
garden/crystal_ledger/: __init__.py  block.py  branch.py  ledger.py  synchronizer.py  validator.py
garden/examples/: garden_demo.py
garden/gradient_schema/: __init__.py  archetypes.py  color_block.py  color_ops.py  corridors.py  euler_gradient.py  euler_integration.py  garden_integration.py  gradient_bloom.py  kaelhedron.py  lattice.py  mrp_lsb.py  octakaelhedron.py  primitives_color.py  test_euler_integration.py  test_integration.py
garden/visualization/: chromatic_vine.html  index.html  kaelhedron.html  (+1 more)
